# cplusplus

./: .gitignore  .replit  CMakeLists.txt  README.md  replit.nix
attached_assets/: Pasted-Du-bist-Replit-Agent-und-arbeitest-in-einem-leeren-Repo_1776187678058.txt
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: Board.cpp  Board.h  Game.cpp  Game.h  main.cpp
